byte-code-compiler/test_files/typing/bad/testfile-arrow-3.psc

struct S { int_32 a; };
int_32 main() { int_32 x; x->a; }
